--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
     "@xstate/fsm": "^1.4.0",
     "fflate": "^0.4.4",
     "mitt": "^1.1.3",
-    "rrweb-snapshot": "^1.1.2"
+    "rrweb-snapshot": "git://github.com/bobjiang1988/rrweb-snapshot.git#2bde289"
   }
 }
